// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packages: updates fixed versions 1`] = `
Array [
  Object {
    "name": "package-1",
    "version": "1.0.1",
  },
  Object {
    "dependencies": Object {
      "package-1": "^1.0.1",
    },
    "name": "package-2",
    "version": "1.0.1",
  },
  Object {
    "devDependencies": Object {
      "package-2": "^1.0.1",
    },
    "name": "package-3",
    "version": "1.0.1",
  },
  Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "name": "package-4",
    "version": "1.0.1",
  },
  Object {
    "dependencies": Object {
      "package-1": "^1.0.1",
    },
    "name": "package-5",
    "private": true,
    "version": "1.0.1",
  },
]
`;

exports[`packages: updates independent versions 1`] = `
Array [
  Object {
    "name": "package-1",
    "version": "2.0.0",
  },
  Object {
    "dependencies": Object {
      "package-1": "^2.0.0",
    },
    "name": "package-2",
    "version": "3.0.0",
  },
  Object {
    "devDependencies": Object {
      "package-2": "^3.0.0",
    },
    "name": "package-3",
    "version": "4.0.0",
  },
  Object {
    "dependencies": Object {
      "package-1": "^0.0.0",
    },
    "name": "package-4",
    "version": "5.0.0",
  },
]
`;

exports[`packages: updates independent versions by npm 1`] = `
"Lerna __TEST_VERSION__
Current version: 1.0.0
Checking for updated packages...
No tags found! Comparing with initial commit.

Changes:
- @integration/package-1: 1.0.0 => 2.0.0
- @integration/package-2: 1.0.0 => 2.0.0

Assuming confirmation."
`;

exports[`stdout: updates fixed versions 1`] = `
"Lerna __TEST_VERSION__
Current version: 1.0.0
Checking for updated packages...
No tags found! Comparing with initial commit.

Changes:
- package-1: 1.0.0 => 1.0.1
- package-2: 1.0.0 => 1.0.1
- package-3: 1.0.0 => 1.0.1
- package-4: 1.0.0 => 1.0.1
- package-5: 1.0.0 => 1.0.1 (private)

Assuming confirmation."
`;

exports[`stdout: updates independent versions 1`] = `
"Lerna __TEST_VERSION__
Independent Versioning Mode
Checking for updated packages...
No tags found! Comparing with initial commit.

Changes:
- package-1: 1.0.0 => 2.0.0
- package-2: 2.0.0 => 3.0.0
- package-3: 3.0.0 => 4.0.0
- package-4: 4.0.0 => 5.0.0

Assuming confirmation."
`;
